--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'maven-publish'
 }
 
 group 'de.dfki.mary'
@@ -15,4 +16,19 @@ repositories {
 dependencies {
     runtime group: 'de.dfki.mary', name: 'marytts-lang-en', version: '5.2'
     runtime group: 'de.dfki.mary', name: 'marytts-lexicon-en_GB-oald', version: '0.1.0-SNAPSHOT'
+}
+
+task sourceJar(type: Jar) {
+    from sourceSets.main.allJava
+}
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            from components.java
+            artifact sourceJar {
+                classifier 'sources'
+            }
+        }
+    }
 }
