--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id "com.github.johnrengelman.shadow" version "1.2.4"
     id 'maven-publish'
 }
 
@@ -18,6 +19,13 @@ dependencies {
     runtime group: 'de.dfki.mary', name: 'marytts-lexicon-en_GB-oald', version: '0.1.0-SNAPSHOT'
 }
 
+shadowJar {
+    classifier = ''
+    relocate 'marytts.language.en_GB.lexicon', 'shadow.marytts.language.en_GB.lexicon'
+    relocate 'marytts.language.en_GB.oald', 'marytts.language.en_GB.lexicon'
+    mergeServiceFiles()
+}
+
 task sourceJar(type: Jar) {
     from sourceSets.main.allJava
 }
@@ -25,7 +33,7 @@ task sourceJar(type: Jar) {
 publishing {
     publications {
         mavenJava(MavenPublication) {
-            from components.java
+            from components.shadow
             artifact sourceJar {
                 classifier 'sources'
             }
